# almanac10

./: .gitignore  CMakeLists.txt  README.md  camera.c  config.h  creature.c  creature.h  debug.c  debug.h  game.h  glad.c  input.c  input.h  main.c  mesh.c  mesh.h  model.c  model.h  projectile.c  renderer.c  renderer.h  script.c  script.h  shader.c  sprite.c  sprite.h  texture.c  texture.h  transform.c  transform.h  ui.h  util.c  util.h  vector.h  vertices.c  world.c  world.h
engine/: camera.c  camera.h  config.c  config.h  creature.c  creature.h  debug.c  debug.h  editor.c  editor.h  game.c  game.h  grid.c  grid.h  input.c  input.h  main.c  mesh.c  mesh.h  model.c  model.h  nuklear_init.h  object.c  object.h  party.c  party.h  player.c  player.h  primitive.h  projectile.c  projectile.h  renderer.c  renderer.h  script.c  script.h  shader.c  shader.h  sprite.c  sprite.h  terrain.c  (+14 more)
scripts/: c_base.lua  c_black_dragon.lua  c_minotaur.lua  c_minotaur_warrior.lua  p_fireball.lua  u_class.lua  u_tools.lua  u_vector.lua  w_tatalia.lua
shaders/: gizmo.frag  grid.frag  grid.vert  mesh.frag  render_texture.frag  render_texture.vert  sprite.frag  sprite.vert
